...

import Foundation

enum BEAccessibilityIdentifiers {

	enum BEMobileTestId {
		static let selectDate = "BEAppStrings.BEMobileTestId.select"
		static let save = "BEAppStrings.BEMobileTestId.save"
		static let saveExplanation = "BEAppStrings.BEMobileTestId.saveExplanation"
		static let saveExplanation2 = "BEAppStrings.BEMobileTestId.saveExplanation2"
	}
	
	enum BECoviCode {
		static let submit = "BEAppStrings.BECoviCode.submit"
		static let explanation = "BEAppStrings.BECoviCode.explanation"
	}
	
	enum BESelectSymptomsDate {
		static let next = "BEAppStrings.BESelectSymptomsDate.next"
	}
	enum BESelectKeyCountries {
		static let explanation = "BEAppStrings.BESelectKeyCountries.explanation"
		static let shareIds = "BEAppStrings.BESelectKeyCountries.shareIds"
	}
	
...
	enum BEMobileDataUsageSettings {
		static let identifier = "BEAppStrings.BESettings.BEMobileDataUsageSettings.identifier"
		static let image = "BEAppStrings.BESettings.BEMobileDataUsageSettings.image"
	}
	
	enum BEExposureNotification {
		static let euInteroperabilityCell = "BEAppStrings.BEExposureNotification.euInteroperability.euInteroperabilityCell"
	}
	
	enum BEHome {
		static let toolbox = "BEAppStrings.BEHome.toolbox"
		static let coviCode = "BEAppStrings.BEHome.coviCode"
		static let covidSafe = "BEAppStrings.BEHome.covidSafe"
...
